Fix linting issue
Signed-off-by: Mustafa Morca <psychoplasma@gmail.com>